fix(button): text editor

--- a/sample/index.html
+++ b/sample/index.html
@@ -1,23 +1,30 @@
-<!DOCTYPE html><!--
+<!DOCTYPE html>
+<!--
 	Copyright (c) 2014-2021, CKSource - Frederico Knabben. All rights reserved.
 	This file is licensed under the terms of the MIT License (see LICENSE.md).
 -->
 
-<html lang="en" dir="ltr"></html>
+<html lang="en" dir="ltr">
+
+</html>
+
 <head>
 	<title>CKEditor 5 ClassicEditor build</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/png" href="https://c.cksource.com/a/1/logos/ckeditor5.png">
-	<link rel="stylesheet" type="text/css" href="styles.css">
+	<!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
 </head>
+
 <body data-editor="ClassicEditor" data-collaboration="false">
 	<header>
 		<div class="centered">
-			<h1><a href="https://ckeditor.com/ckeditor-5/" target="_blank" rel="noopener noreferrer"><img src="https://c.cksource.com/a/1/logos/ckeditor5.svg" alt="CKEditor 5 logo">CKEditor 5</a></h1>
+			<h1><a href="https://ckeditor.com/ckeditor-5/" target="_blank" rel="noopener noreferrer"><img
+						src="https://c.cksource.com/a/1/logos/ckeditor5.svg" alt="CKEditor 5 logo">CKEditor 5</a></h1>
 			<nav>
 				<ul>
-					<li><a href="https://ckeditor.com/docs/ckeditor5/" target="_blank" rel="noopener noreferrer">Documentation</a></li>
+					<li><a href="https://ckeditor.com/docs/ckeditor5/" target="_blank"
+							rel="noopener noreferrer">Documentation</a></li>
 					<li><a href="https://ckeditor.com/" target="_blank" rel="noopener noreferrer">Website</a></li>
 				</ul>
 			</nav>
@@ -33,25 +40,36 @@
 			<div class="row row-editor">
 				<div class="editor-container">
 					<div class="editor">
+						<!-- <textarea name="" id="" cols="30" rows="10"> -->
+		
 						<h2>Bilingual Personality Disorder</h2>
-						<figure class="image image-style-side"><img src="https://c.cksource.com/a/1/img/docs/sample-image-bilingual-personality-disorder.jpg">
+						<figure class="image image-style-side"><img
+								src="https://c.cksource.com/a/1/img/docs/sample-image-bilingual-personality-disorder.jpg">
 							<figcaption>One language, one person.</figcaption>
 						</figure>
 						<p>
 							This may be the first time you hear about this made-up disorder but
-							it actually isn’t so far from the truth. Even the studies that were conducted almost half a century show that
+							it actually isn’t so far from the truth. Even the studies that were conducted almost half a
+							century show that
 							<strong>the language you speak has more effects on you than you realise</strong>.
 						</p>
 						<p>
 							One of the very first experiments conducted on this topic dates back to 1964.
-							<a href="https://www.researchgate.net/publication/9440038_Language_and_TAT_content_in_bilinguals">In the experiment</a>
-							designed by linguist Ervin-Tripp who is an authority expert in psycholinguistic and sociolinguistic studies,
-							adults who are bilingual in English in French were showed series of pictures and were asked to create 3-minute stories.
-							In the end participants emphasized drastically different dynamics for stories in English and French.
+							<a
+								href="https://www.researchgate.net/publication/9440038_Language_and_TAT_content_in_bilinguals">In
+								the experiment</a>
+							designed by linguist Ervin-Tripp who is an authority expert in psycholinguistic and
+							sociolinguistic studies,
+							adults who are bilingual in English in French were showed series of pictures and were asked
+							to create 3-minute stories.
+							In the end participants emphasized drastically different dynamics for stories in English and
+							French.
 						</p>
 						<p>
-							Another ground-breaking experiment which included bilingual Japanese women married to American men in San Francisco were
-							asked to complete sentences. The goal of the experiment was to investigate whether or not human feelings and thoughts
+							Another ground-breaking experiment which included bilingual Japanese women married to
+							American men in San Francisco were
+							asked to complete sentences. The goal of the experiment was to investigate whether or not
+							human feelings and thoughts
 							are expressed differently in <strong>different language mindsets</strong>.
 							<Here>is a sample from the the experiment:</Here>
 						</p>
@@ -82,16 +100,23 @@
 							</tbody>
 						</table>
 						<p>
-							More recent <a href="https://books.google.pl/books?id=1LMhWGHGkRUC">studies</a> show, the language a person speaks affects
+							More recent <a href="https://books.google.pl/books?id=1LMhWGHGkRUC">studies</a> show, the
+							language a person speaks affects
 							their cognition, behaviour, emotions and hence <strong>their personality</strong>.
 							This shouldn’t come as a surprise
-							<a href="https://en.wikipedia.org/wiki/Lateralization_of_brain_function">since we already know</a> that different regions
-							of the brain become more active depending on the person’s activity at hand. Since structure, information and especially
-							<strong>the culture</strong> of languages varies substantially and the language a person speaks is an essential element of daily life.
+							<a href="https://en.wikipedia.org/wiki/Lateralization_of_brain_function">since we already
+								know</a> that different regions
+							of the brain become more active depending on the person’s activity at hand. Since structure,
+							information and especially
+							<strong>the culture</strong> of languages varies substantially and the language a person
+							speaks is an essential element of daily life.
 						</p>
+					
+						<!-- </textarea> -->
 					</div>
 				</div>
-			</div></div>
+			</div>
+		</div>
 		</div>
 	</main>
 	<footer>
@@ -104,34 +129,56 @@
 		</p>
 	</footer>
 
+	<style>
+		.aBuyChannel {
+			line-height: 1.5715;
+			position: relative;
+			display: inline-flex;
+			align-items: center;
+			justify-content: center;
+			font-weight: 400;
+			white-space: nowrap;
+			text-align: center;
+			background-image: none;
+			border: 1px solid transparent;
+			box-shadow: 0 2px #00000004;
+			cursor: pointer;
+			transition: all .3s cubic-bezier(.645,.045,.355,1);
+			-webkit-user-select: none;
+			-moz-user-select: none;
+			-ms-user-select: none;
+			user-select: none;
+			touch-action: manipulation;
+			height: 32px;
+			padding: 4px 15px;
+			font-size: 14px;
+			border-radius: 2px;
+			color: #000000d9;
+			border-color: #d9d9d9;
+			background: #fff;
+		}
+		.aBuyChannel > a {
+			text-decoration: none;
+			color: #000;
+		}
+	</style>
+
 	<!-- this's addtions -->
 	<script src="https://cdn.jsdelivr.net/npm/jquery@1.11.2/dist/jquery.min.js"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/art-dialog@7.0.0/css/dialog.css">
 	<script src="https://cdn.jsdelivr.net/npm/art-dialog@7.0.0/dist/dialog.min.js"></script>
-
-	<script src="../build/ckeditor.js"></script>
-	<script>ClassicEditor
-			.create( document.querySelector( '.editor' ), {
-			htmlSupport: {
-				allow: [
-					{
-						name: 'button',
-						attributes: true,
-						classes: true,
-						styles: true
-					},
-					{
-						name: 'channelButton',
-						attributes: true,
-						classes: true,
-						styles: true
-					},
-					{
-						name: /.*/,
-						attributes: true,
-						classes: true,
-						styles: true
-					}
+	<!-- <script src="https://63006e2699e37801b31e1c01--silver-smakager-f73d10.netlify.app/ckeditor.js"></script> -->
+	<script src="/build/ckeditor.js"></script>
+	<!-- <script>ClassicEditor
+			.create(document.querySelector('.editor'), {
+				htmlSupport: {
+					allow: [
+						{
+							name: /.*/,
+							attributes: true,
+							classes: true,
+							styles: true
+						}
 					]
 				},
 				toolbar: {
@@ -178,30 +225,30 @@
 				},
 				language: 'en',
 				licenseKey: '',
-		      link: {
-            decorators: {
-                addTargetToExternalLinks: {
-                    mode: 'automatic',
-                    callback: url => /^(https?:)?\/\//.test( url ),
-                    attributes: {
-                        target: '_blank',
-                        rel: 'noopener noreferrer'
-                    }
-                }
-            }
-        }
-				
-			} )
-			.then( editor => {
+				link: {
+					decorators: {
+						addTargetToExternalLinks: {
+							mode: 'automatic',
+							callback: url => /^(https?:)?\/\//.test(url),
+							attributes: {
+								target: '_blank',
+								rel: 'noopener noreferrer'
+							}
+						}
+					}
+				}
+
+			})
+			.then(editor => {
 				window.editor = editor;
 
-			} )
-			.catch( error => {
-				console.error( 'Oops, something went wrong!' );
-				console.error( 'Please, report the following error on https://github.com/ckeditor/ckeditor5/issues with the build id and the error stack trace:' );
-				console.warn( 'Build id: y8ybdhfq31kg-y3zf2tdqo9n3' );
-				console.error( error );
-			} );
+			})
+			.catch(error => {
+				console.error('Oops, something went wrong!');
+				console.error('Please, report the following error on https://github.com/ckeditor/ckeditor5/issues with the build id and the error stack trace:');
+				console.warn('Build id: y8ybdhfq31kg-y3zf2tdqo9n3');
+				console.error(error);
+			});
 
 			// document.addEventListener('click', (e) => {
 			// 	if (e.type === 'click') {
@@ -213,5 +260,172 @@
 			// 		}
 			// 	}
 			// })
+	</script> -->
+
+	<script>
+		ClassicEditor
+			.create(document.querySelector(".editor"), {
+				htmlSupport: {
+					allow: [
+						{
+							name: /.*/,
+							attributes: true,
+							classes: true,
+							styles: true
+						}
+					]
+				},
+				// ckfinder: {
+				//     uploadUrl: '/ckfinder/connector?command=QuickUpload&type=Images&responseType=json'
+				// },
+				fontFamily: {
+					options: [
+						'default',
+						'Arial',
+						'Arial Black',
+						'Arial Narrow, sans-serif',
+						'Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif',
+						'Andale Mono, monospace',
+						'Apple Chancery, cursive',
+						'Bookman, URW Bookman L, serif',
+						'Calibri, sans-serif',
+						'Courier New, Courier, monospace',
+						'Courier, monospace',
+						'cursive',
+						'Didot, serif',
+						'fantasy',
+						'FreeMono, monospace',
+						'Gabriola',
+						'Gill Sans, sans-serif',
+						'Georgia, serif',
+						'Helvetica',
+						'Ink Free',
+						'Lucida Sans Unicode, Lucida Grande, sans-serif',
+						'Noto Sans, sans-serif',
+						'OCR A Std, monospace',
+						'Optima, sans-serif',
+						'Palatino, URW Palladio L, serif',
+						'sans - serif',
+						'Segoe Print',
+						'Segoe Script',
+						'Segoe UI',
+						'Shruti',
+						'SimSun',
+						'system - ui',
+						'Sylfaen',
+						'Symbol',
+						'Thai',
+						'Tahoma, Geneva, sans-serif',
+						'Times New Roman, Times, serif',
+						'Trebuchet MS, Helvetica, sans-serif',
+						'Trebuchet MS',
+						'ui-serif',
+						'ui-sans-serif',
+						'ui-monospace',
+						'ui-rounded',
+						'fangsong',
+						'Verdana, Geneva, sans-serif',
+						'Vijaya',
+						'Yu Gothic',
+					],
+					supportAllValues: true
+				},
+				fontSize: {
+					options: [8, 9, 11, 12, 14, 16, 18, 20, 24, 26, 28, 36, 48, 56],
+					supportAllValues: true
+				},
+				toolbar: {
+					items: [
+						'select-dialog',
+						"heading", "|", "fontFamily", "fontSize", "fontColor", "|",
+						"alignment", "indent", "outdent", "|", "ckfinder", "mediaEmbed", "insertTable", "HtmlEmbed",
+						"blockQuote", "bold", "italic",
+						"link", "|",
+						"numberedList", "bulletedList", "todoList",
+						"|", "undo", "redo", "horizontalLine"
+					]
+				},
+				image: {
+					resizeOptions: [
+						{
+							name: 'resizeImage:original',
+							value: null,
+							label: 'Original'
+						},
+						{
+							name: 'resizeImage:40',
+							value: '40',
+							label: '40%'
+						},
+						{
+							name: 'resizeImage:60',
+							value: '60',
+							label: '60%'
+						}
+					],
+					toolbar: [
+						'imageStyle:inline',
+						{
+							name: 'imageStyle:icons',
+							items: ["imageStyle:alignLeft", 'imageStyle:side',],
+							defaultItem: 'imageStyle:alignLeft'
+						},
+						{
+							name: 'imageStyle:pictures',
+							items: ['imageStyle:alignBlockLeft', "imageStyle:alignCenter", 'imageStyle:alignBlockRight',],
+							defaultItem: 'imageStyle:alignCenter'
+						},
+						'|',
+						'resizeImage',
+						'|',
+						'toggleImageCaption',
+						'imageTextAlternative',
+					]
+				},
+				link: {
+					addTargetToExternalLinks: false,
+					decorators: {
+						openInNewTab: {
+							mode: 'manual',
+							label: 'Open in a new tab',
+							attributes: {
+								target: '_blank',
+								rel: 'noopener noreferrer'
+							}
+						},
+						buttonLink: {
+							mode: 'manual',
+							label: 'Style as button',
+							defaultValue: false,
+							attributes: {
+								class: 'btn button m-0 rounded ck-custom-link-button w-auto',
+							}
+						},
+						addTargetToExternalLinks: {
+							mode: 'automatic',
+							callback: url => /^(https?:)?\/\//.test(url),
+							attributes: {
+								target: '_blank',
+								rel: 'noopener noreferrer'
+							}
+						}
+					}
+				},
+				language: 'en',
+				licenseKey: '',
+			})
+			.then(editor => {
+				window.editor = editor;
+				// const imageUploadEditing = editor.plugins.get('ImageUploadEditing');
+				// imageUploadEditing.on('uploadComplete', (evt, { data, imageElement }) => {
+				// 	if (imageElement != "undefine") {
+				// 		let urlPath = data.default;
+				// 		data.default = urlPath.replace(document.querySelector('#surl').value, document.querySelector('#vurl').value);
+				// 	}
+				// });
+			})
+			.catch(err => {
+				console.error(err.stack);
+			});
 	</script>
 </body>
