--- a/sample/index.html
+++ b/sample/index.html
@@ -39,9 +39,9 @@
 		<div class="centered">
 			<div class="row row-editor">
 				<div class="editor-container">
-					<div class="editor">
+					<div class="editor" id="module-name">
 						<!-- <textarea name="" id="" cols="30" rows="10"> -->
-		
+
 						<h2>Bilingual Personality Disorder</h2>
 						<figure class="image image-style-side"><img
 								src="https://c.cksource.com/a/1/img/docs/sample-image-bilingual-personality-disorder.jpg">
@@ -111,7 +111,7 @@
 							<strong>the culture</strong> of languages varies substantially and the language a person
 							speaks is an essential element of daily life.
 						</p>
-					
+
 						<!-- </textarea> -->
 					</div>
 				</div>
@@ -143,7 +143,7 @@
 			border: 1px solid transparent;
 			box-shadow: 0 2px #00000004;
 			cursor: pointer;
-			transition: all .3s cubic-bezier(.645,.045,.355,1);
+			transition: all .3s cubic-bezier(.645, .045, .355, 1);
 			-webkit-user-select: none;
 			-moz-user-select: none;
 			-ms-user-select: none;
@@ -157,7 +157,8 @@
 			border-color: #d9d9d9;
 			background: #fff;
 		}
-		.aBuyChannel > a {
+
+		.aBuyChannel>a {
 			text-decoration: none;
 			color: #000;
 		}
@@ -167,8 +168,8 @@
 	<script src="https://cdn.jsdelivr.net/npm/jquery@1.11.2/dist/jquery.min.js"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/art-dialog@7.0.0/css/dialog.css">
 	<script src="https://cdn.jsdelivr.net/npm/art-dialog@7.0.0/dist/dialog.min.js"></script>
-	<!-- <script src="https://63006e2699e37801b31e1c01--silver-smakager-f73d10.netlify.app/ckeditor.js"></script> -->
-	<script src="/build/ckeditor.js"></script>
+	<script src="https://silver-smakager-f73d10.netlify.app/ckeditor.js"></script>
+	<!-- <script src="/build/ckeditor.js"></script> -->
 
 	<script>
 		ClassicEditor
@@ -324,6 +325,11 @@
 			})
 			.then(editor => {
 				window.editor = editor;
+				// var editor = CKEDITOR.replace('ckeditor_textarea ', {});
+				// editor is object of your CKEDITOR
+				editor.model.document.on('change:data', (evt, data) => {
+					console.log(editor.getData());
+				});
 				// const imageUploadEditing = editor.plugins.get('ImageUploadEditing');
 				// imageUploadEditing.on('uploadComplete', (evt, { data, imageElement }) => {
 				// 	if (imageElement != "undefine") {
@@ -336,4 +342,5 @@
 				console.error(err.stack);
 			});
 	</script>
+
 </body>
