--- a/sample/index.html
+++ b/sample/index.html
@@ -162,14 +162,15 @@
 			text-decoration: none;
 			color: #000;
 		}
+
+		.ck-dropdown__panel {
+			max-height: 200px;
+			overflow: scroll;
+		}
 	</style>
 
-	<!-- this's addtions -->
-	<script src="https://cdn.jsdelivr.net/npm/jquery@1.11.2/dist/jquery.min.js"></script>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/art-dialog@7.0.0/css/dialog.css">
-	<script src="https://cdn.jsdelivr.net/npm/art-dialog@7.0.0/dist/dialog.min.js"></script>
-	<script src="https://silver-smakager-f73d10.netlify.app/ckeditor.js"></script>
-	<!-- <script src="/build/ckeditor.js"></script> -->
+	<!-- <script src="https://silver-smakager-f73d10.netlify.app/ckeditor.js"></script> -->
+	<script src="/build/ckeditor.js"></script>
 
 	<script>
 		ClassicEditor
