--- a/sample/index.html
+++ b/sample/index.html
@@ -16,6 +16,30 @@
 	<!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
 </head>
 
+<style>
+	.simple-box {
+		padding: 10px;
+		margin: 1em 0;
+
+		background: rgba(0, 0, 0, 0.1);
+		border: solid 1px hsl(0, 0%, 77%);
+		border-radius: 2px;
+	}
+
+	.simple-box-title,
+	.simple-box-description {
+		padding: 10px;
+		margin: 0;
+
+		background: #FFF;
+		border: solid 1px hsl(0, 0%, 77%);
+	}
+
+	.simple-box-title {
+		margin-bottom: 10px;
+	}
+</style>
+
 <body data-editor="ClassicEditor" data-collaboration="false">
 	<header>
 		<div class="centered">
@@ -39,80 +63,25 @@
 		<div class="centered">
 			<div class="row row-editor">
 				<div class="editor-container">
-					<div class="editor" id="module-name">
-						<!-- <textarea name="" id="" cols="30" rows="10"> -->
+					<div class="editor">
+						<div class="aBuyChannel"><span>Buy Me N1231ow</span><span class="channel-name" style="display:none;">channel-a</span><span class="channel-id" style="display:none;">channel-name-a</span></div><div class="aBuyChannel"><span>Buy Me12312321 Now</span><span class="channel-name" style="display:none;">channel-c</span><span class="channel-id" style="display:none;">channel-name-c</span></div><p>&nbsp;</p><div class="aBuyChannel"><span>Buy 123123Me Now</span><span class="channel-name" style="display:none;">channel-a</span><span class="channel-id" style="display:none;">channel-name-a</span></div><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
 
-						<h2>Bilingual Personality Disorder</h2>
-						<figure class="image image-style-side"><img
-								src="https://c.cksource.com/a/1/img/docs/sample-image-bilingual-personality-disorder.jpg">
-							<figcaption>One language, one person.</figcaption>
-						</figure>
-						<p>
-							This may be the first time you hear about this made-up disorder but
-							it actually isn’t so far from the truth. Even the studies that were conducted almost half a
-							century show that
-							<strong>the language you speak has more effects on you than you realise</strong>.
-						</p>
-						<p>
-							One of the very first experiments conducted on this topic dates back to 1964.
-							<a
-								href="https://www.researchgate.net/publication/9440038_Language_and_TAT_content_in_bilinguals">In
-								the experiment</a>
-							designed by linguist Ervin-Tripp who is an authority expert in psycholinguistic and
-							sociolinguistic studies,
-							adults who are bilingual in English in French were showed series of pictures and were asked
-							to create 3-minute stories.
-							In the end participants emphasized drastically different dynamics for stories in English and
-							French.
-						</p>
-						<p>
-							Another ground-breaking experiment which included bilingual Japanese women married to
-							American men in San Francisco were
-							asked to complete sentences. The goal of the experiment was to investigate whether or not
-							human feelings and thoughts
-							are expressed differently in <strong>different language mindsets</strong>.
-							<Here>is a sample from the the experiment:</Here>
-						</p>
-						<table>
-							<thead>
-								<tr>
-									<th></th>
-									<th>English</th>
-									<th>Japanese</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr>
-									<td>Real friends should</td>
-									<td>Be very frank</td>
-									<td>Help each other</td>
-								</tr>
-								<tr>
-									<td>I will probably become</td>
-									<td>A teacher</td>
-									<td>A housewife</td>
-								</tr>
-								<tr>
-									<td>When there is a conflict with family</td>
-									<td>I do what I want</td>
-									<td>It's a time of great unhappiness</td>
-								</tr>
-							</tbody>
-						</table>
-						<p>
-							More recent <a href="https://books.google.pl/books?id=1LMhWGHGkRUC">studies</a> show, the
-							language a person speaks affects
-							their cognition, behaviour, emotions and hence <strong>their personality</strong>.
-							This shouldn’t come as a surprise
-							<a href="https://en.wikipedia.org/wiki/Lateralization_of_brain_function">since we already
-								know</a> that different regions
-							of the brain become more active depending on the person’s activity at hand. Since structure,
-							information and especially
-							<strong>the culture</strong> of languages varies substantially and the language a person
-							speaks is an essential element of daily life.
-						</p>
-
-						<!-- </textarea> -->
+						<!-- <section class="simple-box">
+							<h1 class="simple-box-title">123</h1>
+							<div class="simple-box-description">
+								<p>1231231</p>
+							</div>
+						</section>
+						<section class="simple-box">
+							<h1 class="simple-box-title">223</h1>
+							<div class="simple-box-description">
+								<p>123123123</p>
+							</div>
+						</section>
+						<p>&nbsp;</p>
+						<div class="button aBuyChannel"><span>Buy Me Now</span><span class="channel-name"
+								style="display:none;">channel-c</span><span class="channel-id"
+								style="display:none;">channel-name-c</span></div> -->
 					</div>
 				</div>
 			</div>
@@ -246,6 +215,7 @@
 				},
 				toolbar: {
 					items: [
+						// 'simpleBox',
 						'select-dialog',
 						"heading", "|", "fontFamily", "fontSize", "fontColor", "|",
 						"alignment", "indent", "outdent", "|", "ckfinder", "mediaEmbed", "insertTable", "HtmlEmbed",
