fix: button calsses addtional

--- a/sample/index.html
+++ b/sample/index.html
@@ -64,7 +64,7 @@
 			<div class="row row-editor">
 				<div class="editor-container">
 					<div class="editor">
-						<div class="aBuyChannel"><span>Buy Me N1231ow</span><span class="channel-name" style="display:none;">channel-a</span><span class="channel-id" style="display:none;">channel-name-a</span></div><div class="aBuyChannel"><span>Buy Me12312321 Now</span><span class="channel-name" style="display:none;">channel-c</span><span class="channel-id" style="display:none;">channel-name-c</span></div><p>&nbsp;</p><div class="aBuyChannel"><span>Buy 123123Me Now</span><span class="channel-name" style="display:none;">channel-a</span><span class="channel-id" style="display:none;">channel-name-a</span></div><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+						<div class="button aBuyChannel"><span>Buy Me N1231ow</span><span class="channel-name" style="display:none;">channel-a</span><span class="channel-id" style="display:none;">channel-name-a</span></div><div class="aBuyChannel"><span>Buy Me12312321 Now</span><span class="channel-name" style="display:none;">channel-c</span><span class="channel-id" style="display:none;">channel-name-c</span></div><p>&nbsp;</p><div class="aBuyChannel"><span>Buy 123123Me Now</span><span class="channel-name" style="display:none;">channel-a</span><span class="channel-id" style="display:none;">channel-name-a</span></div><p>&nbsp;</p><div class="button aBuyChannel"><span>Buy Me 2Now</span><span class="channel-name" style="display:none;">channel-c</span><span class="channel-id" style="display:none;">channel-name-c</span></div><p>&nbsp;</p><p>&nbsp;</p>
 
 						<!-- <section class="simple-box">
 							<h1 class="simple-box-title">123</h1>
